# JawsCrabChat

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
migrations/2023-01-10-040303_Created user table/: up.sql
src/: db_config.rs  main.rs  models.rs  schema.rs
src/crud_operations/: mod.rs  user_operations.rs
src/data_structures/: app_state.rs
src/rest_operations/user/: mod.rs
